# finegui

./: .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  Doxyfile  ExternalLibs.cmake  INSTALL.html  INSTALL.md  LICENSE  README.md  appveyor.yml  gh-pages.js  gulpfile.js  index.html  package.json
.circleci/: config.yml
.vuepress/: config.js
assets/css/: 0.styles.ac557749.css  0.styles.e65d7ab5.css
assets/js/: 10.42f3759e.js  10.85289a78.js  10.93d6f094.js  10.c1b8454f.js  10.f2b43712.js  100.04b3ac30.js  100.321fef69.js  100.4dd7296b.js  100.b3fb5f38.js  100.e0000d48.js  101.10e1c4c0.js  101.2e3802fe.js  101.8ac14a3c.js  101.996245cd.js  101.cee43cad.js  102.1f848488.js  102.83687d3d.js  102.aa366b61.js  102.c095a8a2.js  102.e3c5e49a.js  103.0ac9eec4.js  103.2bc279fc.js  103.b5ef8757.js  103.d78a4f1a.js  103.f393434d.js  104.36312409.js  104.9e4b1411.js  104.a9ac2973.js  104.cb563817.js  104.e5332adc.js  105.4686755a.js  105.5448e2de.js  105.b3546f16.js  105.d0666265.js  105.f6de5f98.js  106.1594aace.js  106.314d647b.js  106.4261071c.js  106.5bfa9e5c.js  106.e8aa6489.js  (+1253 more)
doxygen/: annotated.html  bug.html  checked_8h.html  checked_8h_source.html  classes.html  classffw_1_1_gui_backend.html  classffw_1_1_gui_body.html  classffw_1_1_gui_box.html  classffw_1_1_gui_button.html  classffw_1_1_gui_button_primary.html  classffw_1_1_gui_button_toggle.html  classffw_1_1_gui_button_toggle_primary.html  classffw_1_1_gui_checkbox.html  classffw_1_1_gui_checkbox_1_1_button.html  classffw_1_1_gui_defaults.html  classffw_1_1_gui_dummy.html  classffw_1_1_gui_event.html  classffw_1_1_gui_fixed_layout.html  classffw_1_1_gui_font.html  classffw_1_1_gui_font_fine_graphics.html  classffw_1_1_gui_font_nano_v_g.html  classffw_1_1_gui_horizontal_layout.html  classffw_1_1_gui_image.html  classffw_1_1_gui_image_fine_graphics.html  classffw_1_1_gui_image_nano_v_g.html  classffw_1_1_gui_image_viewer.html  classffw_1_1_gui_label.html  classffw_1_1_gui_layout.html  classffw_1_1_gui_list.html  classffw_1_1_gui_list_1_1_item.html  classffw_1_1_gui_list_1_1_value.html  classffw_1_1_gui_progress_bar.html  classffw_1_1_gui_progress_circle.html  classffw_1_1_gui_radio.html  classffw_1_1_gui_radio_1_1_button.html  classffw_1_1_gui_radio_1_1_value.html  classffw_1_1_gui_scroll_bar.html  classffw_1_1_gui_scroll_bar_1_1_button_bottom.html  classffw_1_1_gui_scroll_bar_1_1_button_left.html  classffw_1_1_gui_scroll_bar_1_1_button_right.html  (+208 more)
examples/: README.md  align.cpp  align.xml  all-widgets.xml  finegraphics_backend.cpp  finegraphics_test.cpp  glad.c  glad.h  index.html  nanovg_backend_all.cpp  owl.raw
include/ffw/: gui.h
include/ffw/gui/: color.h  config.h  constants.h  guibackend.h  guibody.h  guibox.h  guibutton.h  guibuttontoggle.h  guicheckbox.h  guidummy.h  guifont.h  guiimage.h  guiimageviewer.h  guilabel.h  guilayout.h  guilist.h  guiprogressbar.h  guiprogresscircle.h  guiradio.h  guiscrollable.h  guiscrollbar.h  guislider.h  guistyle.h  guiswitch.h  guitab.h  guitext.h  guitextedit.h  guitextwrapper.h  guitheme.h  guiwidget.h  guiwindow.h  guixmlparser.h  point.h  rect.h
include/ffw/gui/backend/: guibackendfinegraphics.h  guibackendnanovg.h
libs/: make_bzip2.sh
src/: guibackend.cpp  guibody.cpp  guibox.cpp  guibutton.cpp  guibuttontoggle.cpp  guicheckbox.cpp  guidummy.cpp  guifont.cpp  guiimageviewer.cpp  guilabel.cpp  guilayout.cpp  guilist.cpp  guiprogressbar.cpp  guiprogresscircle.cpp  guiradio.cpp  guiscrollable.cpp  guiscrollbar.cpp  guislider.cpp  guiswitch.cpp  guitab.cpp  guitext.cpp  guitextedit.cpp  guitheme_flatdark.cpp  guitheme_flatlight.cpp  guitheme_simpledark.cpp  guitheme_simplelight.cpp  guiwidget.cpp  guiwindow.cpp  guixmlparser.cpp
tests/: gui.cpp  gui_align.cpp  gui_events.cpp  gui_layout.cpp  gui_textwrapper.cpp  gui_widgets.cpp  nullrenderer.h  nullstyles.h
